# CPP-Seminars-spring23

./: .gitignore  CMakeLists.txt  README.md
seminar13/: CMakeLists.txt
seminar13/exceptions/: myvector.cpp  noexcept.cpp
seminar13/iterators_examples/: custom_container.cpp  custom_iterator.h  task1.cpp  tasks.md
seminar13/part1/: exceptions.cpp
seminar14/: CMakeLists.txt
seminar14/container_adapters/: array.cpp  priority_queue.cpp  stack.cpp
seminar14/lru_cache/: README.md  lru_cache.cpp
seminar15/: CMakeLists.txt
seminar15/allocators/: allocator_for_container.cpp  pool_allocator.cpp  simple_allocator.cpp  stupid_pool_allocator.cpp
seminar15/memory/: malloc.cpp  operator_new.cpp  simple_new.cpp
seminar16/: CMakeLists.txt
seminar16/move_semantics/: forward.cpp  move.cpp  reference_qualifier.cpp  use_of_move.cpp  vector.cpp
seminar17/: CMakeLists.txt  exchange.cpp  forward.cpp
seminar18/: CMakeLists.txt
seminar18/smart_pointers/: CMakeLists.txt  make_smart_pointer.cpp  unique_ptr.cpp
seminar18/tuples/: CMakeLists.txt  structured-binding.cpp  tuple.cpp
seminar20/: CMakeLists.txt
seminar20/functions/: CMakeLists.txt  function.cpp  lambdas.cpp
seminar20/type_erasure/: CMakeLists.txt  any.cpp  unions.cpp
seminar21/variant/: CMakeLists.txt  full_variant.cpp  my_variant.cpp  usage.cpp
