add_executable(sem13-intro exceptions/exceptions.cpp)
add_executable(sem13-noexcept exceptions/noexcept.cpp)
#add_executable(sem13-vector-noexcept exceptions/myvector.cpp)

add_executable(sem13-iterator iterators_examples/custom_iterator.h iterators_examples/custom_container.cpp)
add_executable(sem13-examples-task1 iterators_examples/task1.cpp)

